// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message closable 1`] = `
<div
  className="mcore-message mcore-message--primary"
  onClick={[Function]}
>
  <div
    className="mcore-message__header"
  />
  <div
    className="mcore-message__body"
  >
    foo
  </div>
  <div
    className="mcore-message__footer"
  >
    <Icon
      onClick={[Function]}
      prefixCls="mcore-icon"
      size="md"
      theme="default"
      type="wrong"
      viewBox="0 0 32 32"
    />
  </div>
</div>
`;

exports[`Message hasArrow 1`] = `
<div
  className="mcore-message mcore-message--primary"
  onClick={[Function]}
>
  <div
    className="mcore-message__header"
  />
  <div
    className="mcore-message__body"
  >
    foo
  </div>
  <div
    className="mcore-message__footer"
  >
    <Icon
      prefixCls="mcore-icon"
      size="md"
      theme="default"
      type="arrow-right"
      viewBox="0 0 32 32"
    />
  </div>
</div>
`;

exports[`Message icon 1`] = `
<div
  class="mcore-message mcore-message--primary"
>
  <div
    class="mcore-message__header"
  >
    <div
      class="mcore-message__icon"
    >
      <img
        alt=""
        src="\\\\\\\\static.vikit.com/website/health/mcore/images/icons/state.png"
      />
    </div>
  </div>
  <div
    class="mcore-message__body"
  >
    foo
  </div>
</div>
`;

exports[`Message renders correctly 1`] = `
<div
  class="mcore-message mcore-message--primary"
>
  <div
    class="mcore-message__header"
  />
  <div
    class="mcore-message__body"
  >
    foo
  </div>
</div>
`;

exports[`Message theme 1`] = `
<div
  class="mcore-message mcore-message--danger"
>
  <div
    class="mcore-message__header"
  />
  <div
    class="mcore-message__body"
  >
    foo
  </div>
</div>
`;
